# AdaFair

./: AccumFairAdaCost.py  AdaCost.py  AdaFair.py  AdaFairEQOP.py  AdaFairNoCumul.py  AdaFairSP.py  CDF_plots.py  CDF_plotsEQOP.py  CDF_plotsSP.py  C_Evaluation.py  C_Impact.py  C_ImpactEQOP.py  C_ImpactSP.py  Costs_DM.py  Costs_EQOP.py  Costs_SP.py  Evaluation.py  EvaluationEQOP.py  EvaluationPerRound.py  EvaluationSP.py  FairAdaCost.py  IterativeEval.py  LICENSE  NewEvaluation.py  PairedTTest.py  README.md  SMOTEBoost.py  Single_vs_Accum.py  Single_vs_Accum_EQOP.py  Single_vs_Accum_SP.py  Single_vs_Accum_for_Cost.py  Test_weights.py  bank_costs_and_votes  bank_only_costs  bank_original  boosting_dt.py  compass_costs_and_votes  compass_only_costs  compass_original  errorfunctions.py  (+10 more)
Competitors/: AdaCost.py  SMOTEBoost.py  boosting.py  boosting_cost.py  boosting_dt.py  decisionstump.py  funcs_disp_mist.py  loss_funcs.py  lr.py  margin.py  utils.py
DataPreprocessing/: __init__.py  credit.csv  demo_constraints.py  dutch.csv  load_adult.py  load_adult_gender.py  load_adult_race.py  load_bank.py  load_compas_data.py  load_credit.py  load_diabetes.py  load_dutch_data.py  load_kdd.py  process_KDD.py  rrb_evaluation.py
adafair/: AdaFair.py  AdaFairEQOP.py  AdaFairSP.py  __init__.py  load_adult.py
equalized_odds_and_calibration-master/: calib_eq_odds.py  call_eq_odds.py  eq_odds.py
logs/: single_vs_accum_adult_gender.txt  single_vs_accum_bank.txt  single_vs_accum_compass_gender.txt  single_vs_accum_kdd.txt
src/: AdaFair.py  AdaFairEQOP.py  AdaFairSP.py  __init__.py
tests/: eval.py
