[tool.poetry]
name = "adafair"
version = "0.1.0"
description = "Fairness-aware adaptive boosting classifier. see paper: \"AdaFair: Cumulative Fairness Adaptive Boosting\""
authors = ["iosifidisvasileios <billiosifidis@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "src"},  { include = "DataPreprocessing" },  { include = "tests" }]


[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
