[tool.poetry]
name = "adafair"
version = "0.1.4"
description = "Fairness-aware adaptive boosting classifier. See paper: \"AdaFair: Cumulative Fairness Adaptive Boosting\""
authors = ["Dr. Vasileios Iosifidis <billiosifidis@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "adafair"}]


[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^1.3.2"
numpy = "^1.24.4"
scipy = "^1.9.3"
threadpoolctl = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
